added 3rd commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Header Start -->
     <header>
-        
+
     </header>
     <!-- Header End -->
     <main>
@@ -26,29 +26,34 @@
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h3>John Smith</h3>
+                        <h3 class="player-name">John Smith</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3>Pro Rasel</h3>
+                        <h3 class="player-name">Pro Rasel</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3>Abu Sufian</h3>
+                        <h3 class="player-name">Abu Sufian</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3>Shajedul Karim</h3>
+                        <h3 class="player-name">Shajedul Karim</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3>Maruf Ahmed</h3>
+                        <h3 class="player-name">Maruf Ahmed</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3>Mujahid</h3>
+                        <h3 class="player-name">Mujahid</h3>
                     </div>
                 </div>
+            </div>
+            <hr>
+            <div class="top-blogs">
+                <h5 class="section-title">Top Player
+                </h5>
             </div>
         </section>
     </main>
