added 4th commit

--- a/index.html
+++ b/index.html
@@ -52,9 +52,50 @@
             </div>
             <hr>
             <div class="top-blogs">
-                <h5 class="section-title">Top Player
-                </h5>
+                <h5 class="section-title">Top Blog's</h5>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By <span class="author">Danny Sapio</span></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI cheat sheet: list vs grids</h3>
+                            <p class="blog-author">By <span class="author">Jeremiah Lam</span></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 typography tips for interface design</h3>
+                            <p class="blog-author">By <span class="author">Tess Gadd</span></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your logo is copied</h3>
+                            <p class="blog-author">By <span class="author">Ferdinand Vogler</span></p>
+                        </div>
+                    </article>
+                </div>
             </div>
+        </section>
+        <!-- Latest Course Secion  -->
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
         </section>
     </main>
 </body>
