--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <!-- Icon -->
+    <script src="https://kit.fontawesome.com/ce81d1d063.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -96,6 +98,80 @@
         <!-- Latest Course Secion  -->
         <section class="container">
             <h2 class="section-title">Latest Courses</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">
+                            React - The Complete Guide 2023
+                        </h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star-half-stroke filed"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="time">
+                                <i class="fa-regular fa-clock"></i>01.30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">
+                            Powerpoint 2020 Master Powerpoint Cour
+                        </h3>
+                        <p class="course-author">Walter Scott</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star-half-stroke filed"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="time">
+                                <i class="fa-regular fa-clock"></i>01.30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">
+                            The Complete JavaScript Course 2020
+                        </h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star-half-stroke filed"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="time">
+                                <i class="fa-regular fa-clock"></i>01.30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
