added latest commit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- top players and top blogs -->
         <section class="container">
             <div class="top-players ">
-                <h5 class="section-title">Top Player</h5>
+                <h5 class="section-title">Top Web Player</h5>
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
